# GPUFHE

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.it  Dockerfile.repo  README.md  debug.sh  run.sh
include/: core.h
src/: GenArray.cpp  RFHE.cpp  bfvfhe.cpp  bgvfhe.cpp  bgvfhe_gpu.cu  bgvfhe_gpu.cuh  cmp.bat  main.cpp  start.cu  start.cuh  tests.cu  tests.cuh
src/headers/: GenArray.h  RFHE.h
src/sub/: cleartext_encoding_cpu.cpp  cleartext_encoding_cpu.h  cleartext_encoding_gpu.cu  cleartext_encoding_gpu.h  cypertext_eqs.cu  cypertext_eqs.h  general_array.h  keys.h  memory_pool.h  poly.cu  poly.h  poly_eqs.cu  poly_eqs.h  rlwe.cu  rlwe.h
